test/typecheck/pass/exit3.sail

val forall Type 'a. unit -> 'a effect {escape} test

function forall Type 'a. 'a test () =
{
  exit ();
}
