test/typecheck/fail/type_existential.sail

val f : unit -> {('a : Type). 'a}